--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -44,3 +44,14 @@ $pd-6: 30px;
 $pd-8: 60px; 
 $pd-9: 125px;
 $pd-10: 140px;
+
+// variable line-height
+$line-height: 1.4;
+
+// variable font-weight
+$fw-0: 400;
+$fw-1: 500;
+$fw-2: 600;
+$fw-3: 700;
+$fw-bold: bold;
+$fw-normal: normal;
