--- a/src/scss/Helpers/_variables.scss
+++ b/src/scss/Helpers/_variables.scss
@@ -8,13 +8,21 @@ $color-gray-3: #949494;
 $color-gray-4: #BBBBBB;
 $color-gray-5: #AFAFAF;
 $color-gray-6: #E9E9E9;
+$color-gray-7: #999999;
 $color-red-0: #FA5238;
 $color-red-1: #FB4226;
+$color-red-3: #e9371c;
 $color-green-0: #108F3E;
 $color-green-1: #00AC4D;
 $color-green-2: #44C020;
+$color-green-3: #28a745;
+$color-green-4: #06D995;
 $color-orange-0: #FF6600;
-
+$color-white-0: #FFFFFF;
+$color-white-1: #dddddd;
+$color-white-2: #b4b4b4;
+$color-blue-1: #29303b;
+$color-yellow-0: yellow;
 //variable font-size
 $fs-0: 12px;
 $fs-1: 13px;
