--- a/src/scss/Helpers/_mixin.scss
+++ b/src/scss/Helpers/_mixin.scss
@@ -9,3 +9,146 @@
     padding: $pd-y $pd-x;
     cursor: pointer;
 }
+%styleVideo {
+    font-size: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+    background: 0 0;
+    border: none;
+    transition: all 0.2s;
+    color: white;
+}
+
+@mixin styleMovieCard() {
+    .homeMovies__card {
+        .homeMovies__item {
+            padding: 0 $pd-3;
+            position: relative;
+            margin: $mr-2 0;
+            height: 300px;
+            button {
+                width: 100%;
+                border: none;
+                padding: 0;
+            }
+            .homeMovies__wrap {
+                position: relative;
+                .homeMovies__background {
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    background: linear-gradient(to top, #000, transparent 100%);
+                    border-radius: 4px;
+                    width: 100%;
+                    height: 100%;
+                    transition: all 0.2s;
+                    opacity: 0;
+                }
+                .homeMovies__new {
+                    position: absolute;
+                    top: 3%;
+                    left: 3%;
+                    padding: 20px 0 0 0;
+                    background: #fa5238;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        top: 86%;
+                        right: 18%;
+                        border-top: 8px solid #fa5238;
+                        border-right: 5px solid transparent;
+                        border-left: 5px solid transparent;
+                        transform: rotate(85deg);
+                    }
+                    p {
+                        color: #fff;
+                        line-height: 0;
+                        margin-left: 6px;
+                    }
+                }
+                .homeMovies__video {
+                    @extend %styleVideo;
+                    opacity: 0;
+                }
+            }
+            img {
+                width: 100%;
+                border-radius: 4px;
+                height: 350px;
+            }
+            .homeMovies__text {
+                height: 50px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                font-weight: bold;
+                font-size: 18px;
+                text-align: center;
+                margin-top: 5px;
+            }
+            .homeMovies__selected {
+                opacity: 0;
+                a {
+                    display: block;
+                    width: 100%;
+                    margin-top: 20px;
+                    text-align: center;
+                    padding: $pd-2 $pd-3;
+                    background: $color-red-1;
+                    border: none;
+                    background: linear-gradient(to left, #fb4226, #ce3017 100%);
+                    @include styleText($color-white-0, $fs-4, $fw-normal);
+                    border-radius: 4px;
+                    transition: all 0.2s;
+                    text-decoration: none;
+                    &:hover {
+                        background: #fb4226;
+                    }
+                }
+            }
+        }
+        .showHover {
+            transition: all 0.5s;
+            &:hover {
+                .homeMovies__selected {
+                    opacity: 1;
+                }
+                .homeMovies__text {
+                    display: none;
+                }
+                .homeMovies__video {
+                    opacity: 1;
+                }
+                .homeMovies__background {
+                    opacity: 1;
+                }
+            }
+        }
+    }
+}
+@mixin styleChair() {
+    padding: 28px 28px;
+    margin: 12px;
+    border: none;
+    &:focus {
+        outline: none;
+    }
+}
+%styleButton {
+    color: white;
+    @include styleButton($color-red-1, $color-red-1, $pd-1 - 1, $pd-5);
+    @include styleText($color-white-0, $fs-4, $fw-bold);
+    border-radius: 4px;
+    transition: all 0.3s;
+    text-decoration: none;
+    &:hover {
+        background-color: $color-red-3;
+    }
+}
